--- a/PlatedRestaurant/PlatedRestaurant/Base.lproj/Main.storyboard
+++ b/PlatedRestaurant/PlatedRestaurant/Base.lproj/Main.storyboard
@@ -159,6 +159,52 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Na-I6-rJR">
                                 <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="320" id="WcF-6i-7Pd" customClass="RecipesOnMenuTableViewCell" customModule="PlatedRestaurant" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="320"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WcF-6i-7Pd" id="3tf-zx-I8n">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="319.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xa2-VO-dVw">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="219"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rjf-q7-2vw">
+                                                    <rect key="frame" x="15" y="269" width="345" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcz-if-BNf">
+                                                    <rect key="frame" x="15" y="237" width="345" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Rjf-q7-2vw" secondAttribute="trailing" constant="15" id="1Md-ef-iaV"/>
+                                                <constraint firstItem="xa2-VO-dVw" firstAttribute="leading" secondItem="3tf-zx-I8n" secondAttribute="leading" id="2mZ-sC-cJo"/>
+                                                <constraint firstAttribute="trailing" secondItem="Wcz-if-BNf" secondAttribute="trailing" constant="15" id="8Sk-kt-zAR"/>
+                                                <constraint firstItem="Wcz-if-BNf" firstAttribute="trailing" secondItem="3tf-zx-I8n" secondAttribute="trailingMargin" id="AiL-9M-C23"/>
+                                                <constraint firstAttribute="trailing" secondItem="xa2-VO-dVw" secondAttribute="trailing" id="C21-pB-PAn"/>
+                                                <constraint firstItem="Wcz-if-BNf" firstAttribute="leading" secondItem="3tf-zx-I8n" secondAttribute="leading" constant="15" id="COI-E3-ihJ"/>
+                                                <constraint firstItem="xa2-VO-dVw" firstAttribute="top" secondItem="3tf-zx-I8n" secondAttribute="top" id="FaU-9J-0d5"/>
+                                                <constraint firstItem="Wcz-if-BNf" firstAttribute="top" secondItem="xa2-VO-dVw" secondAttribute="bottom" constant="18" id="PNv-ka-NFb"/>
+                                                <constraint firstItem="Rjf-q7-2vw" firstAttribute="leading" secondItem="3tf-zx-I8n" secondAttribute="leading" constant="15" id="ZhH-X4-oTO"/>
+                                                <constraint firstItem="Wcz-if-BNf" firstAttribute="leading" secondItem="3tf-zx-I8n" secondAttribute="leadingMargin" id="aGm-e5-Kmj"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Rjf-q7-2vw" secondAttribute="bottom" constant="24" id="iFs-nN-8R6"/>
+                                                <constraint firstItem="Rjf-q7-2vw" firstAttribute="top" secondItem="Wcz-if-BNf" secondAttribute="bottom" constant="8" id="mSs-z1-Gkb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="recipeDescription" destination="Rjf-q7-2vw" id="sKT-Cg-to1"/>
+                                            <outlet property="recipeImg" destination="xa2-VO-dVw" id="T81-NS-4tM"/>
+                                            <outlet property="recipeName" destination="Wcz-if-BNf" id="2U7-ps-5sR"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="2Pu-nk-ybp" id="pJq-ef-ha3"/>
                                     <outlet property="delegate" destination="2Pu-nk-ybp" id="975-pQ-USb"/>
@@ -181,7 +227,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7VI-sP-zYL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2129" y="54"/>
+            <point key="canvasLocation" x="2128.8000000000002" y="53.523238380809602"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fzq-id-OC1">
@@ -207,6 +253,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="qKX-GV-Zob"/>
+        <segue reference="gHq-nu-cxd"/>
     </inferredMetricsTieBreakers>
 </document>
